$Id: History,v 1.18 2002-11-26 19:27:14 duns Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization/HepRep sub-category
---------------------------------------------------------------------------
26th November 2002 Mark Donszelmann
- Fixed FillStyle, LineStyle, LineWidth, HasFrame and Symbol Names

25th November 2002 Mark Donszelmann
- Fixed HepRep1 warnings in HepRepFileSceneHandler
- Fixed HepRep2 radius of markers to be non-zero
- Fixed HepRep2 attributes some of which had wrong names, especially the markers
- Fixed HepRep2 filename to have sequence number

13th November 2002 Mark Donszelmann
- Added HepRep2 Driver

4th February 2002  Joseph Perl  (vis-V04-00-01)
- Check for missing hierarchy layers in HepRepXMLWriter.
  (Not strictly needed since have a culled layer check in SceneHandler,
  but may be useful in other applications of HepRepXMLWriter).

3rd February 2002  Joseph Perl
- Detect transient data by testing for
  !fpCurrentPV || fReadyForTransients
  rather than just fReadyForTransients

1st February 2002  Joseph Perl
- Defer file opening until first real HepRepType is to be written.
- Moved HepRep code from AddThis to AddPrimitive.